# cim-cac-maxcut-g22

./: .gitignore  CAC.py  CIM.py  CLAUDE.md  CMI_multi_run.py  LICENSE  README.md  SA.py  auto_push.sh  compare.py  pyproject.toml
docs/: SB_algorithm.md  optimization_training_report.pptx
input/: G55.txt  G70.txt  G77.txt  G81.txt
modules/: CAC.py  CIM.py  PT_ICM.py  SA.py  SB.py  __init__.py  rulebase.py  verify.py
results/: benchmark_gset.csv  benchmark_sanity.csv  tune_cac_log.csv
results/2026-05-11/: v1_optuna_best_params.json  v1_optuna_vs_paper_heldout.json  v2_optuna_best_params.json
results/2026-05-17/: reduced_nr3000_optuna_best_params.json  reduced_nr3000_paperfix_optuna_best_params.json  reduced_nr3000_paperfix_vs_paper_heldout.json  reduced_nr3000_vs_paper_heldout.json  reduced_optuna_best_params.json  v1_compare_cim_sa_G22_cuts.npz  v1_compare_cim_sa_G22_summary.json  v2_compare_cim_sa_G22_cuts.npz  v2_compare_cim_sa_G22_summary.json
results/2026-05-19/: SA_PT-ICM_解説.html  per_round_summary.json  sweep_nr10000_best_params.json  sweep_nr3000_best_params.json  sweep_nr300_best_params.json  sweep_nr30_best_params.json  sweep_summary.json
results/2026-05-21/: v3_compare_cim_pticm_G22_cuts.npz  v4_compare_cim_pticm_G22_cuts.npz
results/viz/: smoke_test.html  (+3 more)
scripts/: run_cac_viz.py  trace_cac.py  tune_cac.py  verify.py  visualize.py
tests/: test_tune_cac.py  test_visualize.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+81 files in other folders)
